# snuper

./: .black.toml  .gitignore  .pylintrc  LICENSE  README.md  dk.py  fd.py  main.py  mgm.py  pyproject.toml  pytest.ini  test_config.py
.github/workflows/: ci.yaml  scraper.yaml
event_monitor/: betmgm.py  bovada.py  constants.py  draftkings.py  fanduel.py  runner.py  scraper.py  t.py  utils.py
event_monitor/t/: __init__.py  team.py
resources/: teams.json
resources/sports/baseball/mlb/: teams.json
resources/sports/basketball/nba/: teams.json
resources/sports/football/nfl/: teams.json
scripts/: install.sh  set-ec2-datetime.sh
snuper/: betmgm.py  bovada.py  cli.py  config.py  constants.py  draftkings.py  fanduel.py  merge_rs_games.py  runner.py  scraper.py  sinks.py  t.py  utils.py
tests/: test_config.py  test_dk_odds.py  test_merge_rs_games.py  test_runner_paths.py  test_snuper.py
