[project]
name = "event_monitor"
version = "0.1.0"
description = "Event monitoring service for sports data platforms."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "msgpack",
    "python-dotenv",
    "httpx",
    "websockets",
    "black",
    "playwright",
    "tzlocal",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pylint (>=4.0.2,<5.0.0)"
]
[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
format = "black:main"

[tool.black]
line-length = 80
target-version = ['py312']

[tool.poetry]
package-mode = false
