[project]
name = "event_monitor"
version = "0.1.0"
description = "Event monitoring service for sports data platforms."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "msgpack",
    "python-dotenv",
    "httpx",
    "websockets (>=10.0,<13.0)",
    "black",
    "playwright",
    "tzlocal",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pylint (>=4.0.2,<5.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "inflection (>=0.5.1,<0.6.0)",
    "rapidfuzz (>=3.14.1,<4.0.0)"
]
[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-asyncio",
]

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = true
preview = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.pytest_cache
  | \.venv
  | venv
  | env
  | build
  | dist
  | migrations
  | __pycache__
)/
'''

[project.scripts]
format = "black:main"

[tool.poetry]
package-mode = false
