[tool.poetry]
name = "snuper"
version = "0.1.0"
description = "Event monitoring service for sports data platforms."
authors = ["Arbitration Team"]
readme = "README.md"
packages = [{include = "snuper"}]

[tool.poetry.dependencies]
python = "^3.12"
msgpack = "==1.1.2"
python-dotenv = "==1.1.1"
httpx = "==0.28.1"
websockets = "==12.0"
playwright = "==1.55.0"
tzlocal = "==5.3.1"
pytz = "==2025.2"
inflection = "==0.5.1"
rapidfuzz = "==3.14.1"
playwright-stealth = "==2.0.0"
redis = "==5.3.1"
sqlalchemy = "==2.0.45"
psycopg2 = "==2.9.11"

[tool.poetry.group.dev.dependencies]
black = "==24.10.0"
pytest = "==8.4.2"
pytest-asyncio = "==1.2.0"
pylint = "==3.3.9"

[tool.poetry.scripts]
snuper = "snuper.cli:main"

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = true
preview = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.pytest_cache
  | \.venv
  | venv
  | env
  | build
  | dist
  | migrations
  | __pycache__
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
